--- a/LearningApp/appsettings.json
+++ b/LearningApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LearningApp-4bf32008-a6b9-4cf8-b5b5-2b0c91d69a5b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=Localhost\\SQLEXPRESS;Database=LearningAppDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
